{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 24,
  "lineage": "414d6a24-f003-9ad7-67ca-321094394361",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "expense",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:038462766178:instance/i-0abb6c6020fe56f3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abb6c6020fe56f3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007d696bcea2a2339"
              }
            ],
            "primary_network_interface_id": "eni-007d696bcea2a2339",
            "private_dns": "ip-172-31-17-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.238",
            "public_dns": "ec2-34-224-7-63.compute-1.amazonaws.com",
            "public_ip": "34.224.7.63",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00fc1202a7672da21",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a8a8454920734ba",
            "tags": {
              "Environment": "Dev",
              "Module": "db",
              "Name": "db",
              "Project": "Expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Module": "db",
              "Name": "db",
              "Project": "Expense",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0907325f4de284f70"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462766178",
            "id": "i-0abb6c6020fe56f3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:038462766178:instance/i-068b2539b4c20c8f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068b2539b4c20c8f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0314585af8aed26db"
              }
            ],
            "primary_network_interface_id": "eni-0314585af8aed26db",
            "private_dns": "ip-172-31-25-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.22",
            "public_dns": "ec2-100-31-117-189.compute-1.amazonaws.com",
            "public_ip": "100.31.117.189",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e48bad9cd79b72dd",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a8a8454920734ba",
            "tags": {
              "Environment": "Dev",
              "Module": "backend",
              "Name": "backend",
              "Project": "Expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Module": "backend",
              "Name": "backend",
              "Project": "Expense",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0907325f4de284f70"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462766178",
            "id": "i-068b2539b4c20c8f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:038462766178:instance/i-0ac4fed845774c5a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac4fed845774c5a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09e7ad08025732b83"
              }
            ],
            "primary_network_interface_id": "eni-09e7ad08025732b83",
            "private_dns": "ip-172-31-16-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.109",
            "public_dns": "ec2-54-209-192-50.compute-1.amazonaws.com",
            "public_ip": "54.209.192.50",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05bfec86a51e66eba",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a8a8454920734ba",
            "tags": {
              "Environment": "Dev",
              "Module": "frontend",
              "Name": "frontend",
              "Project": "Expense",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Module": "frontend",
              "Name": "frontend",
              "Project": "Expense",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0907325f4de284f70"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462766178",
            "id": "i-0ac4fed845774c5a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462766178:security-group/sg-0907325f4de284f70",
            "description": "Allow ssh inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0907325f4de284f70",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "038462766178",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Chandana",
              "name": "allow_ssh"
            },
            "tags_all": {
              "CreatedBy": "Chandana",
              "name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6da91060a513d14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462766178",
            "id": "sg-0907325f4de284f70",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462766178:security-group-rule/sgr-0cb90de7bfa388cb3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cb90de7bfa388cb3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0907325f4de284f70",
            "security_group_rule_id": "sgr-0cb90de7bfa388cb3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462766178",
            "id": "sgr-0cb90de7bfa388cb3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462766178:security-group-rule/sgr-03a5d59dd39d2d722",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03a5d59dd39d2d722",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0907325f4de284f70",
            "security_group_rule_id": "sgr-03a5d59dd39d2d722",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462766178",
            "id": "sgr-03a5d59dd39d2d722",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    }
  ]
}